<resources>
    <string name="app_name">Mew</string>
    <string name="start_button">Extract parameter values in the background</string>
    <string name="stop_button">Details available.Stop the service</string>
    <string name="query">Generate Query</string>
    <string name="backup">Backup</string>
    <string name="accept_requests">Accept Incoming Requests</string>
    <string name="stop_requests">Stop Receiving Requests</string>
    <string name="participation">Send device state to server</string>
    <string name="listen">Serve new data requests</string>
    <string name="turn_gps">Turn on GPS</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_query_form">QueryForm</string>
    <string-array name="sensor_names">
        <item>Accelerometer</item>
        <item>GPS</item>
        <item>Camera</item>
    </string-array>
    <string name="hello_world">Hello world!</string>
    <string name="action_preferences">Sensor Preferences</string>
    <string name="title_activity_sensors">Sensor Preferences</string>
    <string name="pref_title_user_name">User Name</string>
    <string name="pref_default_user_name">test</string>
    <string name="pref_title_password">Mew Password</string>
    <string name="pref_default_password">test123</string>
    <string name="pref_title_ipaddress">Mew Server IP Address</string>
    <string name="pref_default_ipaddress">192.168.19.103</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="title_activity_splash">SplashActivity</string>
</resources>
