<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
<PreferenceCategory android:title="Server Settings">
   <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_user_name"
        android:inputType="textCapWords"
        android:key="username"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_user_name" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_password"
        android:inputType="textPassword"
        android:key="password"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_password" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_ipaddress"
        android:inputType="textCapWords"
        android:key="ipaddress"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_ipaddress" />
</PreferenceCategory>
       <PreferenceCategory android:title="Sensors supported">
           <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:title="Select sensors" android:summary="Control sensors">
               <PreferenceCategory android:title="Sensors supported">
           <CheckBoxPreference
                android:defaultValue="true"
                android:key="sen_accelerometer"
                android:summary="Allow"
                android:title="Accelerometer" />

            <CheckBoxPreference
                android:defaultValue="true"
                android:key="sen_microphone"
                android:summary="Allow"
                android:title="Microphone" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="sen_barometer"
                android:summary="Allow"
                android:title="Barometer" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="sen_gyroscope"
                android:summary="Allow"
                android:title="Gyroscope" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="sen_ppg"
                android:summary="Allow"
                android:title="PPG" />
           <CheckBoxPreference
                android:defaultValue="true"
                android:key="sen_wifi"
                android:summary="allow"
                android:title="WiFi" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="sen_gps"
                android:summary="allow"
                android:title="GPS" />
        </PreferenceCategory>
    </PreferenceScreen>
       </PreferenceCategory>
</PreferenceScreen>
